adding fonts & solving text problems

--- a/app/globals.css
+++ b/app/globals.css
@@ -21,3 +21,43 @@
     text-wrap: balance;
   }
 }
+
+@font-face {
+  font-family: "AlicorpSans";
+  src: url("/fonts/AlicorpSans-Regular.woff2") format("woff2"),
+    url("/fonts/AlicorpSans-Regular.woff") format("woff");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "AlicorpSans";
+  src: url("/fonts/AlicorpSans-Medium.woff2") format("woff2"),
+    url("/fonts/AlicorpSans-Medium.woff") format("woff");
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "AlicorpSans";
+  src: url("/fonts/AlicorpSans-SemiBold.woff2") format("woff2"),
+    url("/fonts/AlicorpSans-SemiBold.woff") format("woff");
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "AlicorpSans";
+  src: url("/fonts/AlicorpSans-Bold.woff2") format("woff2"),
+    url("/fonts/AlicorpSans-Bold.woff") format("woff");
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
+body {
+  font-family: "AlicorpSans", sans-serif;
+}
