--- a/app/globals.css
+++ b/app/globals.css
@@ -65,3 +65,85 @@ body {
 .react-datepicker-popper {
   z-index: 20 !important;
 }
+
+.markdown h1 {
+  font-size: 2rem;
+  margin: 1rem 0;
+}
+
+.markdown h2 {
+  font-size: 1.75rem;
+  margin: 1rem 0;
+}
+
+.markdown h3 {
+  font-size: 1.5rem;
+  margin: 1rem 0;
+}
+
+.markdown h4 {
+  font-size: 1.25rem;
+  margin: 1rem 0;
+}
+
+.markdown h5 {
+  font-size: 1rem;
+  margin: 1rem 0;
+}
+
+.markdown h6 {
+  font-size: 0.875rem;
+  margin: 1rem 0;
+}
+
+.markdown p {
+  font-size: 0.875rem;
+  margin-bottom: 1rem;
+}
+
+.markdown a {
+  font-size: 0.875rem;
+  color: #0366d6;
+  text-decoration: none;
+}
+
+.markdown code {
+  font-size: 0.8125rem;
+  font-family: monospace;
+  background-color: #f6f8fa;
+  padding: 0.2em 0.4em;
+  margin: 0;
+  border-radius: 6px;
+}
+
+.markdown pre {
+  font-size: 0.8125rem;
+  font-family: monospace;
+  background-color: #f6f8fa;
+  padding: 1em;
+  overflow: auto;
+  border-radius: 6px;
+}
+
+.markdown li {
+  margin: 0.5rem 0;
+  font-size: 0.875rem;
+}
+
+.markdown table {
+  width: 100%;
+  border-collapse: collapse;
+  margin: 1rem 0;
+}
+
+.markdown th,
+.markdown td {
+  border: 1px solid #ddd;
+  padding: 0.5rem;
+  text-align: left;
+}
+
+.markdown th {
+  background-color: #f6f8fa;
+  font-weight: bold;
+}
